# ByteTrack

./: pyproject.toml
src/bytetrack/: byte_tracker.py  matching.py
